# Fraud-detection-system

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  generate_technical_doc.py  prometheus.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
data/: simulation_edges.parquet
docker/: Dockerfile  Dockerfile.production
docs/: ARCHITECTURE.md  AWS_ARCHITECTURE.md  DEMO_SCRIPT.md
ecs/: api-task-definition.json  beat-task-definition.json  service-api.json  worker-task-definition.json
grafana/dashboards/: fraud-platform-overview.json
k8s/: api-deployment.yml  celery-deployment.yml  configmap.yml  ingress.yml  secret.yml
k8s/base/: api-deployment.yml  celery-deployment.yml  configmap.yml  external-secrets.yml  ingress-alb.yml  monitoring.yml  namespace.yml  network-policies.yml  qdrant.yml  service-accounts.yml
models_artifact/: demo-xgb-v1.pkl  lgb-v5.0.0-rc1.pkl  xgb-v4.2.0.pkl
reports/: adversarial_results.txt  benchmark_report.json  demo_output.txt  test_results_full.txt
scripts/: demo_walkthrough.py  deploy-aws.sh  docker_smoke_test.sh  init_schema.sql  run_benchmark.py  run_eval.py  run_simulation.py  seed_data.py
src/: main.py
src/contracts/: data_contracts.py
src/core/: config.py  database.py  logging.py  secrets.py
src/evaluation/: benchmark.py  harness.py
src/models/: __init__.py  audit.py  dimensions.py  features.py  governance.py  graph.py  investigation.py  labels.py  scoring.py  transactions.py
src/schemas/: features.py  governance.py  graph.py  investigation.py  labels.py  scoring.py  transactions.py
src/simulation/: fraud_simulator.py
src/utils/: fx_service.py  github_workflow.py  notifications.py
src/workers/: celery_app.py  scheduler.py  tasks.py
templates/: base.html
templates/dashboard/: audit.html  cases.html  economics.html  graph.html  models.html  overview.html  replay.html  threshold.html  transaction_detail.html  transactions.html
terraform/: main.tf  outputs.tf  production.tfvars  variables.tf
tests/evaluation/: test_adversarial.py  test_eval_harness.py
tests/integration/: test_scoring_pipeline.py
tests/load/: locustfile.py
tests/resilience/: test_chaos.py
tests/routes/: test_dashboard_routes.py  test_economics_routes.py  (+2 more)
(+53 files in other folders)
