[project]
name = "fraud-detection-platform"
version = "2.0.0"
description = "FAANG-grade fraud decisioning platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "sqlalchemy[asyncio]==2.0.23",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    "qdrant-client==1.7.3",
    "openai==1.6.1",
    "anthropic==0.8.1",
    "scikit-learn==1.3.2",
    "numpy==1.26.3",
    "pandas==2.1.4",
    "scipy==1.11.4",
    "xgboost==2.0.3",
    "lightgbm>=4.0.0",
    "networkx==3.2.1",
    "shap>=0.44.0",
    "httpx==0.26.0",
    "celery[redis]==5.3.6",
    "redis>=5.0.0",
    "aiosqlite>=0.19.0",
    "structlog==24.1.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-prometheus>=0.43b0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "prometheus-client>=0.19.0",
    "slack-sdk==3.26.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "orjson==3.9.10",
    "tenacity==8.2.3",
    "jinja2==3.1.3",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "faker==22.2.0",
]
loadtest = [
    "locust>=2.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
